fixing project to make it readable

--- a/src/App.css
+++ b/src/App.css
@@ -38,5 +38,5 @@
 }
 
 .read-the-docs {
-  color: #888;
+  color: #e8e8e8;
 }
